frontend/tests/errors/ER-011/modulo_by_zero/test.vx
// @rfc: docs/vexel-rfc.md#errors--diagnostics
// @desc: Division by zero traps at runtime | Modulo by zero compiles but traps at runtime


&^main() -> #u8 {
    10 % 0
}
